--- a/app/views/objectives/_modal_activity.html.erb
+++ b/app/views/objectives/_modal_activity.html.erb
@@ -16,6 +16,10 @@
       <input type="checkbox" name="completion" class="form-control" ng-model="current_activity.completion"></input>
     </div>
     <div class="form-group">
+      <label for="organizer"><%= t('.event_title') %></label>
+      <input type="text" placeholder="<%= t('.event_title_placeholder') %>" ng-model="current_activity.event_title" class="form-control">
+    </div>
+    <div class="form-group">
       <label for="organizer"><%= t('.organizer') %></label>
       <select class="form-control" name="organizer" ng-model="current_activity.organizer">
         <option ng-repeat="o in organizer">{{o}}</option>
