--- a/app/views/projects/_overview.html.erb
+++ b/app/views/projects/_overview.html.erb
@@ -173,16 +173,18 @@
                   <% objective.asks.each_with_index do |ask, i| %>
                     <span class='blue'>Petición <%= i+1 %>. </span><b><%= ask.description.presence || t('.empty') %></b>
                     <ul style="list-style-type:disc">
-                      <li>Encargado:
-                        <% if ! ask.actors.nil? %>
-                        <ul class="list-inline">
-                          <% ask.actors.each do |actor|%>
-                            <li><%= actor.name %></li>
+                      <% ask.messages.each do |m| %>
+                      <li>
+                        <%= m.description %>
+                        <p><%= t('.actors') %></p>
+                        <ul>
+                          <% m.actors.each do |a| %>
+                          <li><%= a.name %></li>
                           <% end %>
                         </ul>
-                        <% end %>
+                        <li>Objetivos esperados: <%= get_objective_related ask.objective_id %></li>
                       </li>
-                      <li>Objetivos esperados: <%= get_objective_related ask.objective_id %></li>
+                      <% end %>
                     </ul>
                   <% end %>
                 <% end %>
