--- a/app/views/demo/show.html.erb
+++ b/app/views/demo/show.html.erb
@@ -16,12 +16,12 @@
     <li role="presentation"><a href="#documents" aria-controls="documents" role="tab" data-toggle="tab"><%= t('.documents') %></a></li>
     <li role="presentation"><a href="#overview" aria-controls="overview" role="tab" data-toggle="tab"><%= t('.overview') %></a></li>
   </ul>
-  
+
 
   <div class="project-hero02">
     <h2><%= @project.title %></h2>
     <p><%= @project.description %></p>
-    <button class="btn btn-success" onclick="javascript:introJs().start();">
+    <button class="btn btn-success" onclick="javascript:introJs().setOptions({exitOnOverlayClick: false}).start();">
       <i class="fa fa-map"></i> Guíame
     </button>
   </div>
