--- a/app/views/objectives/stage3.html.erb
+++ b/app/views/objectives/stage3.html.erb
@@ -30,7 +30,7 @@
           <div class="project-hero">
             <h2><%= t('.title') %></h2>
             <p><%= t('.title_description') %></p>
-            <button class="btn btn-success" onclick="javascript:introJs().start();" id="guide">
+            <button class="btn btn-success" onclick="javascript:introJs().setOptions({exitOnOverlayClick: false}).start();" id="guide">
               <i class="fa fa-map"></i> <%= t('.guide_me') %>
             </button>
           </div>
