--- a/app/views/objectives/stage5.html.erb
+++ b/app/views/objectives/stage5.html.erb
@@ -116,8 +116,8 @@
                     </div>
                     <div class="col-xs-12 col-md-6">
                       <ul class="list-unstyled" ng-repeat="day in days" ng-if="day.events.length">
+                          {{day.date.format('D MMM')}}
                         <li ng-repeat="d in day.events">
-                          {{day.day}}
                           <ul class="list-unstyled" ng-if="d.title">
                             <li>
                               {{d.title}}
