--- a/app/views/projects/_prioritized_modal.html.erb
+++ b/app/views/projects/_prioritized_modal.html.erb
@@ -1,5 +1,9 @@
 <script type="text/ng-template" id="prioritized-aside.html">
 <!-- key contribution -->
+<div class="modal-header">
+  <h3 class="modal-title"><%= t('.prioritized') %></h3>
+</div>
+<div class="modal-body">
   <h4 class="mtb40"><%= t('.key_contribution') %></h4>
   <div class="row mb20">
     <div class="col-md-4">
@@ -152,6 +156,7 @@
       </div>
     </div>
   </div>
+</div>
   <!-- end comparative advantage -->
   <div class="modal-footer">
     <button class="btn btn-primary" ng-click="save($event)" ng-class="{disabled: current_objective.title == ''}"><%= t('.save_button') %></button>
