--- a/app/views/objectives/stage5.html.erb
+++ b/app/views/objectives/stage5.html.erb
@@ -62,7 +62,7 @@
                         <li>{{ o }}</li>
                       </ul>
                     </td>
-                    <td nowrap>{{activity.scheduling | date: "dd 'de' MMMM, yyyy" }}</td>
+                    <td nowrap>{{activity.scheduling | date: "shortDate" }}</td>
                     <td class="text-center">{{ activity.percentage }}%</td>
                     <td class="text-center">
                       <i class="fa fa-check" ng-if="activity.completion"></i>
