--- a/app/views/objectives/stage6.html.erb
+++ b/app/views/objectives/stage6.html.erb
@@ -57,7 +57,9 @@
                     <thead>
                       <tr>
                         <th> </th>
+                        <th>Fecha Entrega</th>
                         <th>Actores</th>
+                        <th>Encargado</th>
                         <th>Mensajes</th>
                         <th class="text-right">Acciones</th>
                       </tr>
@@ -67,6 +69,7 @@
                         <td>
                           <i class="fa" ng-class="{'fa-check': m.executed}"></i>
                         </td>
+                        <td>20/02/2016</td>
                         <td>
                           <ul class="list-inline">
                             <li ng-repeat="a in m.actors">
@@ -74,6 +77,7 @@
                             </li>
                           </ul>
                         </td>
+                        <td>Juan Pérez</td>
                         <td>{{m.description}}</td>
                         <td class="text-right">
                           <i class="fa fa-pencil-square-o" ng-click="add_edit_msj(ask, m)" title="<%= t('.edit') %>"></i>
