--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -506,7 +506,7 @@ div#resources_paginate {
   padding: 50px 0;
   text-align: center;
   background-color: #00C2E4;
-  height: 650px;
+  /*height: 650px;*/
 }
 .benefits p {
   color: #ffffff;
@@ -559,7 +559,7 @@ div#resources_paginate {
   font-style: italic;
   color: #ffffff;
   margin-bottom: 5px;
-  margin: 50px 0 5px 0;
+  margin: 20px 0 5px 0;
 }
 .testimonial p.persona {
   font-size: 16px;
