--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -54,10 +54,10 @@
         <p><%= t('.sentence_keep_track') %></p>
       </div>
     </div>
-    <div class="row text_right">
+    <!-- <div class="row text_right">
       <a class="btn btn-warning" id="startButton" href="/demo/?tour=true" target="_self" role="button"><%= t('.button_demo') %></a>
       <a class="btn btn-default" href="#" role="button"><%= t('.button_read_more') %></a>
-    </div>
+    </div> -->
   </div>
 </div>
 <div class="testimonial">
@@ -81,11 +81,11 @@
         <%= image_tag "t5.png", class: "img-circle" %>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-9 col-lg-9">
-        <p class="cita">“<%= t('.testimony1_txt') %>”</p>
-        <p class="persona"><%= t('.testimony1_signer') %></p>
+        <p class="cita">“<%= t('.testimony2_txt') %>”</p>
+        <p class="persona"><%= t('.testimony2_signer') %></p>
       </div>
     </div>
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
         <%= image_tag "t6.png", class: "img-circle" %>
       </div>
@@ -93,7 +93,7 @@
         <p class="cita">“<%= t('.testimony3_txt') %>”</p>
         <p class="persona"><%= t('.testimony3_signer') %></p>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
 <div class="organizations">
