--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -78,7 +78,7 @@
     </div>
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-        <%= image_tag "t5.png", class: "img-circle" %>
+        <%= image_tag "t5.jpg", class: "img-circle" %>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-9 col-lg-9">
         <p class="cita">“<%= t('.testimony2_txt') %>”</p>
@@ -107,6 +107,7 @@
       <div class="col-md-12 logos">
         <a href="http://www.techo.org/paises/chile/" target="_blank"><%= image_tag "logo-techo.png", class: "logos" %></a>
         <a href="http://www.hogardecristo.cl/" target="_blank"><%= image_tag "logo-hogar.png", class: "logos" %></a>
+        <a href="http://ciudadanointeligente.org/" target="_blank"><%= image_tag "logo-FCI.png", class: "logos" %></a>
         
         
       </div>     
