--- a/app/views/objectives/stage6.html.erb
+++ b/app/views/objectives/stage6.html.erb
@@ -46,6 +46,7 @@
               <div class="panel-heading">
                 <button type="button" class="btn btn-warning pull-right" ng-click="delete_ask(ask)"><i class="fa fa-trash"></i></button>
                 <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_ask(ask)"><i class="fa fa-pencil"></i></button>
+                <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_indicator(ask)"><i class="fa fa-line-chart"></i></button>
                 <h4 class="panel-title">{{ ask.description }}</h4>
               </div>
                 <div class="collapse in">
