indicator added to asks, closes #64

--- a/app/views/objectives/stage6.html.erb
+++ b/app/views/objectives/stage6.html.erb
@@ -98,6 +98,7 @@
           </div>
           <%= render "asks_modal" %>
           <%= render "msj_modal" %>
+          <%= render "objectives/modal_indicator" %>
           </div>
           <!-- end of actions -->
           <div role="tabpanel" class="tab-pane" id="explanation">
