Testimonios editados e img de Danae LowFi

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -502,16 +502,16 @@ div#resources_paginate {
   right: 0;
   left: auto;
 }
-.benefits{
+.benefits, .estratega{
   padding: 50px 0;
   text-align: center;
   background-color: #00C2E4;
   /*height: 650px;*/
 }
-.benefits p {
+.benefits p, .estratega p {
   color: #ffffff;
 }
-.benefits h2 {
+.benefits h2, .estratega h2 {
   color: #ffffff;
 }
 
