add borde político logo

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -117,7 +117,7 @@
         <a href="http://www.techo.org/paises/chile/" target="_blank"><%= image_tag "logo-techo.png", class: "logos" %></a>
         <a href="http://www.hogardecristo.cl/" target="_blank"><%= image_tag "logo-hogar.png", class: "logos" %></a>
         <a href="http://ciudadanointeligente.org/" target="_blank"><%= image_tag "logo-FCI.png", class: "logos" %></a>
-        
+        <a href="http://bordepolitico.com/" target="_blank"><%= image_tag "logo-borde-politico.png", class: "logos" %></a>
         
       </div>     
     </div>
