Logo borde político y ajustes a css

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -583,6 +583,7 @@ div#resources_paginate {
 }
 .organizations h2 {
   color: #ffffff;
+  margin-bottom: 50px;
 }
 .organizations{
   padding: 50px 0;
