--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -69,6 +69,15 @@
     </div>
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+        <%= image_tag "t6.png", class: "img-circle" %>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-9 col-lg-9">
+        <p class="cita">“<%= t('.testimony3_txt') %>”</p>
+        <p class="persona"><%= t('.testimony3_signer') %></p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
         <%= image_tag "t4.png", class: "img-circle" %>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-9 col-lg-9">
@@ -85,15 +94,6 @@
         <p class="persona"><%= t('.testimony2_signer') %></p>
       </div>
     </div>
-    <!-- <div class="row">
-      <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-        <%= image_tag "t6.png", class: "img-circle" %>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-9 col-lg-9">
-        <p class="cita">“<%= t('.testimony3_txt') %>”</p>
-        <p class="persona"><%= t('.testimony3_signer') %></p>
-      </div>
-    </div> -->
   </div>
 </div>
 <div class="organizations">
@@ -104,13 +104,18 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-12 logos">
+      <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
         <a href="http://www.techo.org/paises/chile/" target="_blank"><%= image_tag "logo-techo.png", class: "logos" %></a>
+      </div>
+      <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
         <a href="http://www.hogardecristo.cl/" target="_blank"><%= image_tag "logo-hogar.png", class: "logos" %></a>
+      </div>
+      <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
         <a href="http://ciudadanointeligente.org/" target="_blank"><%= image_tag "logo-FCI.png", class: "logos" %></a>
-        
-        
-      </div>     
+      </div>
+      <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+         <a href="http://bordepolitico.com/" target="_blank"><img class="logos" src="/assets/logo-borde-politico.png" alt="Logo borde politico"></a>
+       </div>     
     </div>
   </div>
 </div>
