--- a/app/views/objectives/_msj_modal.html.erb
+++ b/app/views/objectives/_msj_modal.html.erb
@@ -10,7 +10,7 @@
       </div>
       <div class="form-group">
         <label for="actors"><%= t('.actors') %></label>
-        <select name="actor_id" ng-options="actor.id as actor.name for actor in actors track by actor.id" ng-model="current_msj.actors" class="form-control"></select>
+        <select name="actor_id" ng-options="actor.id as actor.name for actor in actors" ng-model="current_msj.actor_id" class="form-control"></select>
       </div>
       <div class="form-group">
         <label for="executed"><%= t('.executed') %></label>
