message modal preloading actor fixed #84

--- a/app/views/objectives/stage6.html.erb
+++ b/app/views/objectives/stage6.html.erb
@@ -72,11 +72,12 @@
                         </td>
                         <td>20/02/2016</td>
                         <td width="30%">
-                          <ul class="list-unstyled">
-                            <li ng-repeat="a in m.actors">
-                              {{a.name}}
-                            </li>
+                          <!--
+                          <ul class="list-unstyled"> 
+                            <li ng-repeat="a in m.actors"> {{a.name}} </li>
                           </ul>
+                          -->
+                          {{m.actor.name}}
                         </td>
                         <td width="30%">Cena Anirversario Fundación Bla</td>
                         <td width="15%">Juan Pérez</td>
