fix for references to message.actors, closes #84

--- a/app/views/objectives/stage6.html.erb
+++ b/app/views/objectives/stage6.html.erb
@@ -70,7 +70,7 @@
                         <td width="5%">
                           <i class="fa" ng-class="{'fa-check': m.executed}" title="Entregado"></i>
                         </td>
-                        <td>20/02/2016</td>
+                        <td>{{m.created_at | date:"dd/MM/yyyy"}}</td>
                         <td width="30%">
                           <!--
                           <ul class="list-unstyled"> 
