fixed project overview for messages without actor and message list unused columns removed, #84

--- a/app/views/objectives/stage6.html.erb
+++ b/app/views/objectives/stage6.html.erb
@@ -60,8 +60,6 @@
                         <th></th>
                         <th>Fecha</th>
                         <th>Actor(es)</th>
-                        <th>Actividad</th>
-                        <th>Encargado</th>
                         <th class="text-right">Acciones</th>
                       </tr>
                     </thead>
@@ -70,17 +68,10 @@
                         <td width="5%">
                           <i class="fa" ng-class="{'fa-check': m.executed}" title="Entregado"></i>
                         </td>
-                        <td>20/02/2016</td>
+                        <td>{{m.created_at | date:'dd/MM/yyyy'}}</td>
                         <td width="30%">
-                          <!--
-                          <ul class="list-unstyled"> 
-                            <li ng-repeat="a in m.actors"> {{a.name}} </li>
-                          </ul>
-                          -->
                           {{m.actor.name}}
                         </td>
-                        <td width="30%">Cena Anirversario Fundación Bla</td>
-                        <td width="15%">Juan Pérez</td>
                         <td class="text-right">
                           <i class="fa fa-pencil-square-o" ng-click="add_edit_msj(ask, m)" title="<%= t('.edit') %>"></i>
                           <i class="fa fa-trash" ng-click="delete_msj(ask, m)" title="<%= t('.delete') %>"></i>
