add Person In Charge(as string) to Ask model #75

--- a/app/views/objectives/_asks_modal.html.erb
+++ b/app/views/objectives/_asks_modal.html.erb
@@ -8,6 +8,10 @@
         <label for="ask"><%= t('.ask') %></label>
         <textarea name="description" class="form-control" rows="3" ng-model="current_ask.description" placeholder="<%= t('.ask_placeholder') %>"></textarea>
       </div>
+      <div class="form-group">
+        <label for="ask"><%= t('.person_in_charge') %></label>
+        <textarea name="description" class="form-control" rows="3" ng-model="current_ask.person_in_charge" placeholder="<%= t('.person_in_charge_placeholder') %>"></textarea>
+      </div>
     </form>
   </div>
   <div class="modal-footer">
