--- a/app/views/objectives/_modal_activity.html.erb
+++ b/app/views/objectives/_modal_activity.html.erb
@@ -12,6 +12,11 @@
       <textarea name="description" class="form-control" ng-model="current_activity.description" placeholder="<%= t('.description_placeholder') %>"></textarea>
     </div>
     <div class="form-group">
+      <label for="actors"><%= t('.actors_label') %></label>
+      <select class="form-control" name="actor_ids" multiple="multiple" ng-multiple="true" ng-model="current_activity.actor_ids" ng-options="actor.id as actor.name for actor in actors">
+      </select>
+    </div>
+    <div class="form-group">
       <label for="completion"><%= t('.completion') %></label>
       <input type="checkbox" name="completion" class="form-control" ng-model="current_activity.completion"></input>
     </div>
