--- a/app/views/objectives/stage5.html.erb
+++ b/app/views/objectives/stage5.html.erb
@@ -44,29 +44,25 @@
               <table class="table">
                 <thead>
                   <tr>
-                    <th><%= t('.activities') %></th>
-                    <th><%= t('.description') %></th>
-                    <th><%= t('.outcomes') %></th>
-                    <th><%= t('.date') %></th>
-                    <th><%= t('.progress') %></th>
-                    <th class="text-center"><%= t('.completion') %></th>
+                    <th class="text-left"><%= t('.date') %></th>
+                    <th class="text-left"><%= t('.description') %></th>
+                    <th class="text-left"><%= t('.actors') %></th>
+                    <th class="text-center"><%= t('.type') %></th>
                     <th class="text-right"><%= t('.actions') %></th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr ng-repeat="activity in activities">
-                    <td>{{activity.title}}</td>
+                    <td nowrap>{{activity.scheduling | date: "shortDate" }}</td>
                     <td>{{activity.description}}</td>
                     <td>
-                      <ul class="list-unstyled" ng-repeat="o in get_outcome_names(activity.outcome_ids, outcomes) track by $index">
-                        <li>{{ o }}</li>
+                      <ul class="list-unstyled" ng-repeat="actor in get_actor_names(activity.actor_ids, actors) track by $index">
+                        <li>{{ actor }}</li>
                       </ul>
                     </td>
-                    <td nowrap>{{activity.scheduling | date: "shortDate" }}</td>
-                    <td class="text-center">{{ activity.percentage }}%</td>
-                    <td class="text-center">
-                      <i class="fa fa-check" ng-if="activity.completion"></i>
-                    </td>
+                    
+                    <td class="text-left">{{ activity.activity_types }}</td>
+                  
                     <td class="text-right" nowrap>
                       <i class="fa fa-pencil-square-o" ng-click="add_edit_activity(activity)" title="Edit"></i>
                       <i class="fa fa-line-chart" ng-click="add_edit_indicator(activity)" title="Indicators"></i>
