--- a/app/views/objectives/_modal_activity.html.erb
+++ b/app/views/objectives/_modal_activity.html.erb
@@ -7,11 +7,10 @@
       <label for="description"><%= t('.description') %></label>
       <textarea name="description" class="form-control" ng-model="current_activity.description" placeholder="<%= t('.description_placeholder') %>"></textarea>
     </div>
-    <div class="form-group">
-      <label for="actors"><%= t('.actors_label') %></label>
-      <select class="form-control" name="actor_ids" multiple="multiple" ng-multiple="true" ng-model="current_activity.actor_ids" ng-options="actor.id as actor.name for actor in actors">
-      </select>
-    </div>
+      <div class="form-group">
+        <label for="outcome"><%= t('.outcomes') %></label>
+        <select name="outcome_id" ng-options="outcome.id as outcome.name for outcome in outcomes" ng-model="current_activity.outcome_id" class="form-control"></select>
+      </div>
     <div class="form-group">
       <label for="completion"><%= t('.completion') %></label>
       <input type="checkbox" name="completion" class="form-control" ng-model="current_activity.completion"></input>
