--- a/app/views/objectives/stage4.html.erb
+++ b/app/views/objectives/stage4.html.erb
@@ -1,100 +1,186 @@
-<% content_for :breadcrumb do %>
-  <div class="breadcrumb_bg">
-    <ol class="breadcrumb container">
-      <li>
-        <%= link_to t('.projects'), projects_path, target: "_self" %>
-      </li>
-      <li><%= link_to truncate(@project.title, length: 30), @project, target: "_self" %></li>
-      <li><%= t('.stage4') %></li>
-    </ol>
-  </div>
-<% end %>
-
-<div class="container main">
-  <div class="row">
-    <div id="main_alerts" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" ng-controller="stage4Ctrl" data-errorgettingactortype="<%= t('.error_getting_actor_type') %>" data-errorgettingoutcomes="<%= t('.error_getting_outcomes') %>" data-errorgettingcategories="<%= t('.error_getting_categories') %>" data-errorupdatingoutcome="<%= t('.error_updating_outcome') %>" data-errorcreatingoutcome="<%= t('.error_creating_outcome') %>" data-confirmdeleteoutcome="<%= t('.confirm_delete_outcome') %>">
-      <div class="alert" role="alert" ng-class="messages.response?'alert-success':'alert-danger'" ng-if="messages.message">
-        <button ng-click="dismiss_modal()" type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        {{ messages.message }}
-      </div>
-      <div role="tabpanel" class="tabpanel">
-        <!-- nav tabs -->
-        <ul class="nav nav-tabs" role="tablist">
-          <li role="presentation" class="active"><a href="#data" aria-controls="data" role="tab" data-toggle="tab" Onclick="show_intro()"><%= t('.data_entry') %></a></li>
-          <li role="presentation"><a href="#explanation" aria-controls="explanation" role="tab" data-toggle="tab" Onclick="hide_intro()"><%= t('.explanation_examples') %></a></li>
-        </ul>
-        <!-- tab panes -->
-        <div class="tab-content">
-          <div class="project-hero">
-            <h2><%= t('.subtitle1') %></h2>
-            <p><%= t('.subtitle1_explanation') %></p>
-            <button class="btn btn-success" onclick="javascript:introJs().setOptions({exitOnOverlayClick: false}).start();" id="guide">
-              <i class="fa fa-map"></i> <%= t('.guide_me') %>
-            </button>
-          </div>
-          <div role="tabpanel" class="tab-pane active" id="data">
-            <div class="panel panel-default">
-              <div class="panel-heading"  data-step="1" data-intro="<%= t('.step_one') %>">
-                <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" title="<%= t('.subtitle1_tooltip') %>"><i class="fa fa-info"></i></button>
-                <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_outcome()"><i class="fa fa-plus-circle"></i> <%= t('.add_button') %></button>
-                <h4 class="panel-title"><%= t('.subtitle1') %></h4>
-              </div>
+  <% content_for :breadcrumb do %>
+    <div class="breadcrumb_bg">
+      <ol class="breadcrumb container">
+        <li>
+          <%=link_to t( '.projects'), projects_path, target: "_self" %>
+        </li>
+        <li>
+          <%=link_to truncate(@project.title, length: 30), @project, target: "_self" %>
+        </li>
+        <li>
+          <%=t ( '.stage4') %>
+        </li>
+      </ol>
+    </div>
+    <% end %>
+  
+      <div class="container main">
+        <div class="row">
+          <div id="main_alerts" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" ng-controller="stage4Ctrl" data-errorgettingactortype="<%= t('.error_getting_actor_type') %>" data-errorgettingoutcomes="<%= t('.error_getting_outcomes') %>" data-errorgettingcategories="<%= t('.error_getting_categories') %>"
+          data-errorupdatingoutcome="<%= t('.error_updating_outcome') %>" data-errorcreatingoutcome="<%= t('.error_creating_outcome') %>" data-confirmdeleteoutcome="<%= t('.confirm_delete_outcome') %>">
+            <div class="alert" role="alert" ng-class="messages.response?'alert-success':'alert-danger'" ng-if="messages.message">
+              <button ng-click="dismiss_modal()" type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              {{ messages.message }}
             </div>
-            <div class="contenedor">
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th><%= t('.interim_outcome') %></th>
-                    <th><%= t('.interim_outcome_type') %></th>
+            <div role="tabpanel" class="tabpanel">
+              <!-- nav tabs -->
+              <ul class="nav nav-tabs" role="tablist">
+                <li role="presentation" class="active">
+                  <a href="#data" aria-controls="data" role="tab" data-toggle="tab" Onclick="show_intro()">
+                    <%=t ( '.data_entry') %>
+                  </a>
+                </li>
+                <li role="presentation">
+                  <a href="#explanation" aria-controls="explanation" role="tab" data-toggle="tab" Onclick="hide_intro()">
+                    <%=t ( '.explanation_examples') %>
+                  </a>
+                </li>
+              </ul>
+              <!-- tab panes -->
+              <div class="tab-content">
+                <div class="project-hero">
+                  <h2><%= t('.subtitle1') %></h2>
+                  <p>
+                    <%=t ( '.subtitle1_explanation') %>
+                  </p>
+                  <button class="btn btn-success" onclick="javascript:introJs().setOptions({exitOnOverlayClick: false}).start();" id="guide">
+                    <i class="fa fa-map"></i>
+                    <%=t ( '.guide_me') %>
+                  </button>
+                </div>
+                <div role="tabpanel" class="tab-pane active" id="data">
+                  <div class="panel panel-default">
+                    <div class="panel-heading" data-step="1" data-intro="<%= t('.step_one') %>">
+                      <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" title="<%= t('.subtitle1_tooltip') %>"><i class="fa fa-info"></i></button>
+                      <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_outcome()"><i class="fa fa-plus-circle"></i>
+                        <%=t ( '.add_button') %>
+                      </button>
+                      <h4 class="panel-title"><%= t('.subtitle1') %></h4>
+                    </div>
+                  </div>
+                  <div class="contenedor">
+                    <!--<table class="table">-->
+                    <!--  <thead>-->
+                    <!--    <tr>-->
+                    <!--      <th><%= t('.interim_outcome') %></th>-->
+                    <!--      <th><%= t('.interim_outcome_type') %></th>-->
                     <!-- <th><%= t('.actor_type') %></th> -->
-                    <th data-step="2" data-intro="<%= t('.step_two') %>"><%= t('.activities_number') %></th>
-                    <th class="text-right"><%= t('.actions') %></th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr ng-repeat="outcome in outcomes">
-                    <td>{{outcome.description}}</td>
-                    <td>{{outcome.outcome_type_id}}</td>
+                    <!--      <th data-step="2" data-intro="<%= t('.step_two') %>"><%= t('.activities_number') %></th>-->
+                    <!--      <th class="text-right"><%= t('.actions') %></th>-->
+                    <!--    </tr>-->
+                    <!--  </thead>-->
+                    <!--  <tbody>-->
+                    <!--    <tr ng-repeat="outcome in outcomes">-->
+                    <!--      <td>{{outcome.description}}</td>-->
+                    <!--      <td>{{outcome.outcome_type_id}}</td>-->
                     <!--<td>{{outcome.actor_type_id}}</td>-->
-                    <td>{{outcome.no_activities}}</td>
-                    <td class="text-right">
-                      <a href="#" title="Editar" ng-click="add_edit_outcome(outcome)"><i class="fa fa-pencil-square-o"></i></a> 
-                      <a href="#" title="Indicators" ng-click="add_edit_indicator(outcome)"><i class="fa fa-line-chart"></i></a>
-                      <a href="#" title="Eliminar" ng-click="delete_outcome(outcome)"><i class="fa fa-trash"></i></a>
-                      </td>
-                  </tr>
-                </tbody>
-              </table>
-              <nav>
-                <!-- <ul class="pagination">
-                  <li>
-                      <a href="#" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                      </a>
-                  </li>
-                  <li><a href="#">1</a></li>
-                  <li><a href="#">2</a></li>
-                  <li><a href="#">3</a></li>
-                  <li><a href="#">4</a></li>
-                  <li><a href="#">5</a></li>
-                  <li>
-                      <a href="#" aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                      </a>
-                  </li>
-                </ul> -->
-              </nav>
-            </div>
-            <%= render "outcome_modal" %>
-            <%= render "objectives/modal_indicator" %>
-          </div>
-          <div role="tabpanel" class="tab-pane" id="explanation">
-            <div class="box">
-              <%= render "explanation_stage4" %>
+                    <!--      <td>{{outcome.no_activities}}</td>-->
+                    <!--      <td class="text-right">-->
+                    <!--        <a href="#" title="Editar" ng-click="add_edit_outcome(outcome)"><i class="fa fa-pencil-square-o"></i></a> -->
+                    <!--        <a href="#" title="Indicators" ng-click="add_edit_indicator(outcome)"><i class="fa fa-line-chart"></i></a>-->
+                    <!--        <a href="#" title="Eliminar" ng-click="delete_outcome(outcome)"><i class="fa fa-trash"></i></a>-->
+                    <!--        </td>-->
+                    <!--    </tr>-->
+                    <!--    <tr>-->
+  
+                    <!--    </tr>-->
+                    <!--  </tbody>-->
+                    <!--</table>-->
+                    <div class="nestedDemo row ng-scope" ng-controller="stage4Ctrl">
+  
+                      <!-- Markup for lists inside the dropzone. It's inside a seperate template
+         because it will be used recursively. The dnd-list directive enables
+         to drop elements into the referenced array. The dnd-draggable directive
+         makes an element draggable and will transfer the object that was
+         assigned to it. If an element was dragged away, you have to remove
+         it from the original list yourself using the dnd-moved attribute -->
+                      <script type="text/ng-template" id="list.html">
+                        <ul dnd-list="list">
+                          <li ng-repeat="item in list" 
+                          dnd-draggable="item" 
+                          dnd-effect-allowed="move" 
+                          dnd-moved="list.splice($index, 1)" 
+                          dnd-selected="list.selected = item" 
+                          ng-class="{selected: list.selected === item}" 
+                          ng-include="item.description ? 'item.html' : 'container.html'"></li>
+                        </ul>
+                      </script>
+  
+                      <!-- This template is responsible for rendering a container element. It uses
+         the above list template to render each container column -->
+                      <script type="text/ng-template" id="container.html">
+                        <div class="panel panel-default">
+                          <div class="panel-heading">
+                            <h4 class="panel-title">{{item.label}} {{item.id}}</h4>
+                          </div>
+                          <div class="container-element box box-blue dropzone">
+                            <div class="" ng-repeat="list in item.elements" ng-include="'list.html'"></div>
+                            <div class="clearfix"></div>
+                          </div>
+                        </div>
+                      </script>
+  
+                      <!-- Template for a normal list item -->
+                      <script type="text/ng-template" id="item.html">
+                        <div class="item">{{item.description}}</div>
+                      </script>
+  
+                      <!-- Main area with dropzones and source code -->
+                      <div class="panel panel-default">
+                        <div class="panel-heading">
+                          <button type="button" class="btn btn-primary pull-right btn-in-line" data-toggle="tooltip" data-placement="left" title="<%= t('.theoryofchange_tooltip') %>"><i class="fa fa-info"></i></button>
+                          <span class="panel-title"><%= t('.theoryofchange') %></span>
+                          <ul>
+                            <!-- The toolbox only allows to copy objects, not move it. After a new
+                     element was created, dnd-copied is invoked and we generate the next id -->
+                            <li ng-repeat="item in drag_outcomes.templates" dnd-draggable="item" dnd-effect-allowed="copy" dnd-copied="item.id = item.id + 1">
+                              <button type="button" class="btn btn-warning pull-right" ng-click=""><i class="fa fa-plus-circle"></i><%= t('.outcome_group') %> </button>
+                            </li>
+                          </ul>
+                        </div>
+  
+                        <!--<div ng-repeat="list in drag_outcomes.dropzones" class="">-->
+                        <div class="dropzone">
+                          <div ng-repeat="list in drag_outcomes.dropzones" class="">
+                            <div ng-include="'list.html'"></div>
+                          </div>
+                        </div>
+                        <!--</div>-->
+                      </div>
+                    </div>
+  
+                    <nav>
+                      <!-- <ul class="pagination">
+                      <li>
+                          <a href="#" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                          </a>
+                      </li>
+                      <li><a href="#">1</a></li>
+                      <li><a href="#">2</a></li>
+                      <li><a href="#">3</a></li>
+                      <li><a href="#">4</a></li>
+                      <li><a href="#">5</a></li>
+                      <li>
+                          <a href="#" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                          </a>
+                      </li>
+                    </ul> -->
+  
+                    </nav>
+                  </div>
+                  <%=render "outcome_modal" %>
+                    <%=render "objectives/modal_indicator" %>
+                </div>
+                <div role="tabpanel" class="tab-pane" id="explanation">
+                  <div class="box">
+                    <%=render "explanation_stage4" %>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</div>
+  
