--- a/app/views/objectives/stage4.html.erb
+++ b/app/views/objectives/stage4.html.erb
@@ -95,6 +95,7 @@
          assigned to it. If an element was dragged away, you have to remove
          it from the original list yourself using the dnd-moved attribute -->
                       <script type="text/ng-template" id="list.html">
+                        {{list}}
                         <ul dnd-list="list">
                           <li ng-repeat="item in list" 
                           dnd-draggable="item" 
@@ -122,7 +123,22 @@
   
                       <!-- Template for a normal list item -->
                       <script type="text/ng-template" id="item.html">
-                        <div class="item">{{item.description}}</div>
+                        <div class="item">
+                          <table class="table">
+                            <tr>
+                              <td>
+                                {{item.description}}
+                              </td>
+                              <td class="text-right">
+                                <a href="#" title="Editar" ng-click="add_edit_outcome(item)"><i class="fa fa-pencil-square-o"></i></a>
+                                
+                                <a href="#" title="Indicators" ng-click="add_edit_indicator(item)"><i class="fa fa-line-chart"></i></a>
+                                
+                                <a href="#" title="Eliminar" ng-click="delete_outcome(item)"><i class="fa fa-trash"></i></a>
+                              </td>
+                            </tr>
+                          </table>
+                        </div>
                       </script>
   
                       <!-- Main area with dropzones and source code -->
