Hotfix, hid activities in project page

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -150,14 +150,16 @@
                               <a href="#">(Coming soon) Define theory of change</a>
                             </td>
                           </tr> -->
-                          <tr title="<%= title_stage 3 %>">
+                          <!--
+                          <tr title="<%#= title_stage 3 %>">
                             <td class="text-center td-w-10p">
-                              <i class="<%= icon_class objective.activities %>"></i>
+                              <i class="<%#= icon_class objective.activities %>"></i>
                             </td>
                             <td>
-                              <%= link_to objective_link_text(objective, :activities), stage5_project_objective_path(@project, objective), target: "_self" %>
+                              <%#= link_to objective_link_text(objective, :activities), stage5_project_objective_path(@project, objective), target: "_self" %>
                             </td>
                           </tr>
+                          -->
 <!--                           <tr title="You must complete the previous step">
                             <td class="text-center td-w-10p">
                               <i class="fa fa-lock"></i>
