--- a/app/views/objectives/stage4.html.erb
+++ b/app/views/objectives/stage4.html.erb
@@ -145,13 +145,13 @@
                         <div class="panel-heading">
                           <button type="button" class="btn btn-primary pull-right btn-in-line" data-toggle="tooltip" data-placement="left" title="<%= t('.theoryofchange_tooltip') %>"><i class="fa fa-info"></i></button>
                           <span class="panel-title"><%= t('.theoryofchange') %></span>
-                          <ul>
+                     <!--     <ul>-->
                             <!-- The toolbox only allows to copy objects, not move it. After a new
-                     element was created, dnd-copied is invoked and we generate the next id -->
-                            <li ng-repeat="item in drag_outcomes.templates" dnd-draggable="item" dnd-effect-allowed="copy" dnd-copied="item.id = item.id + 1">
-                              <button type="button" class="btn btn-warning pull-right" ng-click=""><i class="fa fa-plus-circle"></i><%= t('.outcome_group') %> </button>
-                            </li>
-                          </ul>
+                     <!--element was created, dnd-copied is invoked and we generate the next id -->
+                     <!--       <li ng-repeat="item in drag_outcomes.templates" dnd-draggable="item" dnd-effect-allowed="copy" dnd-copied="item.id = item.id + 1">-->
+                     <!--         <button type="button" class="btn btn-warning pull-right" ng-click=""><i class="fa fa-plus-circle"></i><%= t('.outcome_group') %> </button>-->
+                     <!--       </li>-->
+                     <!--     </ul>-->
                         </div>
                         <!--<div ng-repeat="list in drag_outcomes.dropzones" class="">-->
                         <div class="dropzone">
