filter asks by outcome passing outcome id in the path, fixes 104

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -186,7 +186,7 @@
                               <i class="<%= icon_class objective.asks %>"></i>
                             </td>
                             <td>
-                              <%= link_to outcome_link_text(outcome, :asks), stage6_project_objective_path(@project, objective), target: "_self" %>
+                              <%= link_to outcome_link_text(outcome, :asks), stage6_project_objective_outcome_path(@project, objective, outcome), target: "_self" %>
                             </td>
                           </tr>
                         </tbody>
